# uv-tutorial

./: LICENSE  README.md  pyproject.toml
application/: README.md  pyproject.toml
application/scripts/: main.py
script/: main.py
scripts/: tutorial1.py  tutorial2_1.py  tutorial2_2.py
src/myproject/: cubic_util.py  sinutil.py
