[project]
name = "myproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
]
[tool.uv]
#src-layout = true


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"



